--- a/cart.html
+++ b/cart.html
@@ -9,145 +9,145 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      background-color: #f3f4f6;
-      margin: 0;
-      padding-bottom: 60px;
-    }
-    .header {
-      background: linear-gradient(90deg, #232f3e 70%, #0070f3 100%);
-      color: #fff;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 4px 12px rgba(0, 112, 243, 0.3);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    .header h1 {
-      font-size: 2.2rem;
-      margin: 0;
-      letter-spacing: 1px;
-      font-weight: 700;
-    }
-    .nav-group button {
-      background: transparent;
-      color: #fff;
-      font-size: 1rem;
-      font-weight: 600;
-      border: none;
-      cursor: pointer;
-      margin-left: 18px;
-      padding: 6px 10px;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-    .nav-group button:hover {
-      background: rgba(255, 255, 255, 0.15);
-    }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      font-size: 1.8rem;
-      font-weight: 700;
-      color: #111827;
-      margin-bottom: 1.5rem;
-      border-bottom: 2px solid #0070f3;
-      padding-bottom: 8px;
-    }
-    .cart-container {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.07);
-      padding: 1.5rem 2rem;
-      transition: 0.3s;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 0.98rem;
-    }
-    th, td {
-      padding: 12px 10px;
-      border-bottom: 1px solid #e2e8f0;
-      text-align: left;
-    }
-    th {
-      background-color: #f9fafb;
-      color: #1f2937;
-      font-weight: 700;
-      text-transform: uppercase;
-      font-size: 0.9rem;
-    }
-    tr:hover td {
-      background-color: #f9fafc;
-    }
-    .cart-empty {
-      text-align: center;
-      font-size: 1.1rem;
-      padding: 2rem;
-      color: #888;
-    }
-    .remove-btn {
-      background: #e11d48;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 6px 12px;
-      cursor: pointer;
-      transition: background 0.3s;
-      font-weight: 600;
-    }
-    .remove-btn:hover {
-      background: #b91c1c;
-    }
-    .summary {
-      margin-top: 1.6rem;
-      text-align: right;
-      font-size: 1rem;
-      font-weight: 600;
-      color: #111827;
-    }
-    .total-box {
-      font-size: 1.25rem;
-      font-weight: 700;
-      background: #0070f3;
-      color: #fff;
-      display: inline-block;
-      padding: 10px 18px;
-      border-radius: 6px;
-      margin-bottom: 15px;
-    }
-    .place-order-btn {
-      background: linear-gradient(90deg, #e91e63 0%, #f43f5e 100%);
-      color: white;
-      font-weight: 700;
-      font-size: 1.1rem;
-      padding: 12px 34px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: 0.3s;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.15);
-    }
-    .place-order-btn:hover {
-      background: linear-gradient(90deg, #ff4081 0%, #ff1744 100%);
-      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    }
-    @media (max-width: 700px) {
-      table, th, td {
-        font-size: 0.85rem;
-      }
-      h2 {
-        font-size: 1.5rem;
-      }
-      .total-box, .place-order-btn { font-size: 1rem; }
-    }
+     font-family: 'Montserrat', Arial, sans-serif;
+     background-color: #f3f4f6;
+     margin: 0;
+     padding-bottom: 60px;
+   }
+   .header {
+     background: linear-gradient(90deg, #232f3e 70%, #0070f3 100%);
+     color: #fff;
+     padding: 1rem 2rem;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     box-shadow: 0 4px 12px rgba(0, 112, 243, 0.3);
+     position: sticky;
+     top: 0;
+     z-index: 100;
+   }
+   .header h1 {
+     font-size: 2.2rem;
+     margin: 0;
+     letter-spacing: 1px;
+     font-weight: 700;
+   }
+   .nav-group button {
+     background: transparent;
+     color: #fff;
+     font-size: 1rem;
+     font-weight: 600;
+     border: none;
+     cursor: pointer;
+     margin-left: 18px;
+     padding: 6px 10px;
+     border-radius: 5px;
+     transition: background 0.3s;
+   }
+   .nav-group button:hover {
+     background: rgba(255, 255, 255, 0.15);
+   }
+   main {
+     max-width: 900px;
+     margin: 2rem auto;
+     padding: 0 1rem;
+   }
+   h2 {
+     font-size: 1.8rem;
+     font-weight: 700;
+     color: #111827;
+     margin-bottom: 1.5rem;
+     border-bottom: 2px solid #0070f3;
+     padding-bottom: 8px;
+   }
+   .cart-container {
+     background: white;
+     border-radius: 10px;
+     box-shadow: 0 3px 8px rgba(0,0,0,0.07);
+     padding: 1.5rem 2rem;
+     transition: 0.3s;
+   }
+   table {
+     width: 100%;
+     border-collapse: collapse;
+     font-size: 0.98rem;
+   }
+   th, td {
+     padding: 12px 10px;
+     border-bottom: 1px solid #e2e8f0;
+     text-align: left;
+   }
+   th {
+     background-color: #f9fafb;
+     color: #1f2937;
+     font-weight: 700;
+     text-transform: uppercase;
+     font-size: 0.9rem;
+   }
+   tr:hover td {
+     background-color: #f9fafc;
+   }
+   .cart-empty {
+     text-align: center;
+     font-size: 1.1rem;
+     padding: 2rem;
+     color: #888;
+   }
+   .remove-btn {
+     background: #e11d48;
+     color: #fff;
+     border: none;
+     border-radius: 4px;
+     padding: 6px 12px;
+     cursor: pointer;
+     transition: background 0.3s;
+     font-weight: 600;
+   }
+   .remove-btn:hover {
+     background: #b91c1c;
+   }
+   .summary {
+     margin-top: 1.6rem;
+     text-align: right;
+     font-size: 1rem;
+     font-weight: 600;
+     color: #111827;
+   }
+   .total-box {
+     font-size: 1.25rem;
+     font-weight: 700;
+     background: #0070f3;
+     color: #fff;
+     display: inline-block;
+     padding: 10px 18px;
+     border-radius: 6px;
+     margin-bottom: 15px;
+   }
+   .place-order-btn {
+     background: linear-gradient(90deg, #e91e63 0%, #f43f5e 100%);
+     color: white;
+     font-weight: 700;
+     font-size: 1.1rem;
+     padding: 12px 34px;
+     border: none;
+     border-radius: 6px;
+     cursor: pointer;
+     transition: 0.3s;
+     box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+   }
+   .place-order-btn:hover {
+     background: linear-gradient(90deg, #ff4081 0%, #ff1744 100%);
+     box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+   }
+   @media (max-width: 700px) {
+     table, th, td {
+       font-size: 0.85rem;
+     }
+     h2 {
+       font-size: 1.5rem;
+     }
+     .total-box, .place-order-btn { font-size: 1rem; }
+   }
   </style>
 </head>
 <body>
@@ -266,6 +266,9 @@
         .select()
         .single();
       if (orderError) throw new Error(orderError.message);
+
+      // Insert order items and track sellers
+      let uniqueSellers = new Set();
       for (let i of cartItems) {
         await supabase.from('order_items').insert([{
           order_id: order.id,
@@ -278,12 +281,89 @@
         const newStock = (i.products.stock || 0) - i.quantity;
         if (newStock >= 0)
           await supabase.from('products').update({ stock: newStock }).eq('id', i.product_id);
+
+        if (i.products.seller_id) {
+          uniqueSellers.add(i.products.seller_id);
+        }
       }
       await supabase.from('cart').delete().eq('customer_id', customerId);
+
+      await sendOrderNotifications(order.id, customerId, Array.from(uniqueSellers), totalAmount, paymentType);
+
       alert(`Order placed successfully (${paymentType === 'cod' ? 'COD' : 'Online Payment'})`);
       loadCart();
     } catch (err) {
       alert('Order Error: ' + err.message);
+    }
+  }
+
+  // Function to send notifications & emails
+  async function sendOrderNotifications(orderId, customerId, sellerIds, totalAmount, paymentType) {
+    try {
+      // Get customer info
+      const { data: customerProfile } = await supabase
+        .from('profiles')
+        .select('email, name')
+        .eq('id', customerId)
+        .single();
+      const customerEmail = customerProfile?.email;
+      const customerName = customerProfile?.name || "Customer";
+
+      await supabase.from('notifications').insert([{
+        user_id: customerId,
+        email: customerEmail,
+        title: 'Order Confirmation',
+        message: `Hi ${customerName}, your order #${orderId} has been placed successfully for ₹${totalAmount} via ${paymentType === 'cod' ? 'Cash on Delivery' : 'Online Payment'}.`,
+        type: 'order_placed',
+        order_id: orderId,
+        created_at: new Date().toISOString()
+      }]);
+
+      // Send real email using Edge Function
+      if (customerEmail) {
+        await fetch('https://wamqheltqmufuzrqlxlb.functions.supabase.co/sendEmail', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            email: customerEmail,
+            title: 'Order Confirmation',
+            message: `Hi ${customerName}, your order #${orderId} has been placed successfully for ₹${totalAmount} via ${paymentType === 'cod' ? 'Cash on Delivery' : 'Online Payment'}.`
+          })
+        });
+      }
+
+      // Notifications and emails to all sellers
+      for (const sellerId of sellerIds) {
+        const { data: sellerProfile } = await supabase
+          .from('profiles').select('email, name').eq('id', sellerId).single();
+        const sellerEmail = sellerProfile?.email;
+        const sellerName = sellerProfile?.name || "Seller";
+
+        await supabase.from('notifications').insert([{
+          user_id: sellerId,
+          email: sellerEmail,
+          title: 'New Order Received!',
+          message: `Hi ${sellerName}, you have received a new order #${orderId} from ${customerName} for ₹${totalAmount} via ${paymentType === 'cod' ? 'COD' : 'Online Payment'}.`,
+          type: 'new_order',
+          order_id: orderId,
+          created_at: new Date().toISOString()
+        }]);
+
+        // Send seller email
+        if (sellerEmail) {
+          await fetch('https://wamqheltqmufuzrqlxlb.functions.supabase.co/sendEmail', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+              email: sellerEmail,
+              title: 'New Order Received!',
+              message: `Hi ${sellerName}, you have received a new order #${orderId} from ${customerName} for ₹${totalAmount} via ${paymentType === 'cod' ? 'COD' : 'Online Payment'}.`
+            })
+          });
+        }
+      }
+    } catch (error) {
+      console.error('Order notification/email error:', error);
     }
   }
 
