--- a/signup.html
+++ b/signup.html
@@ -43,8 +43,8 @@
   window.onload = function() {
     const supabase = window.supabase.createClient(
       'https://wamqheltqmufuzrqlxlb.supabase.co',
-      'your-anon-key-here'
-    );
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
+  );
     const form = document.getElementById('signup-form');
     const messageDiv = document.getElementById('message');
     const roleSelect = document.getElementById('role');
